fixed login css on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -123,12 +123,13 @@ input[type=password] {
 
 .Login-submit {
   background: var(--verde);
-  font-family: Graphik-Semibold-Web, sans-serif;
-  color: white;
+  font-family: var(--sans-font);
+  color: var(--white);
   font-weight: 600;
   text-transform: uppercase;
   border: none;
   padding: 0.4rem 0.8rem 0.3rem;
+  border-radius: 3px;;
 }
 
 .Login.isVisible {
@@ -197,7 +198,7 @@ input[type=password] {
     padding: .5rem 0;
   }
   .Login-field input[type=text],
-input[type=password] {
+  .Login-field input[type=password] {
   width: 90%;
   margin: 0 auto;
 
@@ -210,7 +211,7 @@ input[type=password] {
   padding: 5px 7px;
 }
 .Login-submit{
-  margin-right: 5%;
+  margin: 1rem 5% 1rem 0;
 }
 
 
